# gmn

./: 404.html  LICENSE  README.md  index.html  pyproject.toml  sitemap.xml
apps/: CreateNetwork.py  InteractionMatrix.py  NetworkNodesToCSV.py  PlotMatrix.py  Run.py  RunDir.py  RunNoConfig.py  WriteConfigs.py
config/: default-SMap.cfg  default-kedm.cfg  default-noPlot.cfg  default.cfg  test.cfg
config/ABCD_Test/E5/: ABCD_E5_tau-1_Tp1.cfg  ABCD_E5_tau-2_Tp1.cfg  ABCD_E5_tau-3_Tp1.cfg
config/ABCD_Test/E6/: ABCD_E6_tau-1_Tp1.cfg  ABCD_E6_tau-2_Tp1.cfg  ABCD_E6_tau-3_Tp1.cfg
config/ABCD_Test/E7/: ABCD_E7_tau-1_Tp1.cfg  ABCD_E7_tau-2_Tp1.cfg  ABCD_E7_tau-3_Tp1.cfg
config/ABCD_Test/E8/: ABCD_E8_tau-1_Tp1.cfg  ABCD_E8_tau-2_Tp1.cfg  ABCD_E8_tau-3_Tp1.cfg
data/: TestData_ABCD.csv  TestData_ABCD_A1.csv
doc/: README.md  mkdocs.yml
doc/docs/: edm.md  example.md  extra.css  functions.md  index.md  installation.md  overview.md  parameters.md
edm/: index.html
example/: index.html
functions/: index.html
gmn/: Auxiliary.py  CLI_Parser.py  Common.py  ConfigParser.py  Forecast.py  GMN.py  Generate.py  Network.py  Node.py  Parameters.py  Plot.py  __init__.py
installation/: index.html
network/ABCD_Test/: ABCD_Network_E3_T0_tau-1_CMI.pkl  ABCD_Network_E3_T0_tau-1_rhoDiff.pkl
network/ABCD_Test/iMatrix/: ABCD_iMatrix_E3_T0_tau-1.pkl  ABCD_iMatrix_E3_T0_tau-1_CMI.csv  ABCD_iMatrix_E3_T0_tau-1_rhoDiff.csv
output/: ABCD_Network_E5_tau-3_CCM.pkl  ABCD_iMatrix_E5_tau-3_CCM.csv
overview/: index.html
parameters/: index.html
tests/: A.cfg  DataOut_ABCD_A1_CMI_E7_tau-3.csv  DataOut_ABCD_CMI_E7_tau-3.csv  DataOut_ABCD_Forecast_E7_tau-3.csv  gmn_forecast1.cfg  gmn_test1.cfg  gmn_test_readNode.cfg  tests.py
