[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name    = "gmn"
version = "1.4.2"
authors = [
  { name = "Joseph Park", email = "JosephPark@IEEE.org" },
  { name = "Gerald Pao",  email = "Gerald.Pao@OIST.jp"  },
]
description = "Generative Manifold Networks"
readme      = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pyEDM>=2.1.0",
  "networkx>=3.0",
  "pandas>=2.0",
  "pyarrow",
  "numpy",
  "matplotlib",
  "scikit-learn",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: Free For Educational Use",
  "Operating System :: OS Independent",
]

[project.urls]
"Homepage"      = "https://github.com/NonlinearDynamicsDSU/gmn"
"Documentation" = "https://nonlineardynamicsdsu.github.io/gmn/"
"Issues"        = "https://github.com/NonlinearDynamicsDSU/gmn/issues"

#[tool.setuptools]
#py-modules = ['gmn']
