[project]
name          = "gmn"
description   = "Generative Manifold Networks"
dynamic       = ["version","versionDate"]
readme        = "README.md"
license-files = ["LICENSE"]
authors = [
  { name = "Joseph Park", email = "JosephPark@IEEE.org" },
  { name = "Gerald Pao",  email = "Gerald.Pao@OIST.jp"  },
]
requires-python = ">=3.11"
dependencies = [
  "pyEDM>=2.3.0",
  "networkx>=3.0",
  "pandas>=2.0",
  "pyarrow",
  "numpy",
  "matplotlib",
  "scikit-learn",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
[project.urls]
"Homepage"      = "https://github.com/NonlinearDynamicsDSU/gmn"
"Documentation" = "https://nonlineardynamicsdsu.github.io/gmn/"
"Issues"        = "https://github.com/NonlinearDynamicsDSU/gmn/issues"
[tool.pdm.version]
source = "file"
path   = "gmn/__init__.py"
[tool.pdm.build]
includes = ["gmn/", "apps/", "config/", "data/", "network/", "tests/"]
[build-system]
requires      = ["pdm-backend"]
build-backend = "pdm.backend"
